# global-stock-selection-research-agent

./: .gitignore  README.md  main.py  pyproject.toml  参考方案.md
docs/superpowers/plans/: 2026-05-23-kronos-mvp-week1.md  2026-05-23-market-data-source-implementation.md  2026-05-24-global-aware-stock-selection-roadmap.md  (+7 more)
resources/universes/: cn_industry_leaders.csv  us_theme_watchlist.csv
scripts/: benchmark_models.py  build_core_universe.py  migrate_sqlite_market_data.py  run_data_sync.py  run_prediction.py  run_real_data_factors.py  run_screening.py
src/openstockagent/: __init__.py  config.py
tests/: conftest.py  test_akshare_feed.py  test_cn_daily_selection_pipeline.py  test_core_universe.py  test_core_universe_cli.py  test_csv_feed.py  test_data_models.py  test_data_sync.py  test_entry.py  test_entry_cli.py  test_entry_storage.py  test_factor_engine.py  test_feed_registry.py  test_feeds.py  test_kronos_adapter.py  test_kronos_storage.py  test_market_reality.py  test_market_regime.py  test_market_storage.py  test_mysql_config.py  test_normalize_validate.py  test_polygon_feed.py  test_portfolio.py  test_portfolio_cli.py  test_real_data_factor_cli.py  test_real_data_factor_pipeline.py  test_recommendations.py  test_recommendations_cli.py  test_research_cli.py  test_research_evaluation.py  test_research_rolling.py  test_screening.py  test_screening_cli.py  test_storage.py  test_tushare_daily_batch.py  test_tushare_feed.py  test_tushare_reference_sync.py  test_universe.py  test_yahoo_feed.py
tests/fixtures/: cn_sample_universe.csv  sample_bars.csv
(+81 files in other folders)
