[project]
name = "openstockagent"
version = "0.1.0"
description = "Local-first stock monitoring with Kronos prediction"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.1",
    "pandas>=3.0.3",
    "pytest>=9.0.3",
    "yfinance>=1.3.0",
]

[project.scripts]
stock-predict = "scripts.run_prediction:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openstockagent"]
