[project]
name = "openstockagent"
version = "0.1.0"
description = "Global-aware quantitative stock selection research agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "akshare>=1.17.0",
    "click>=8.4.1",
    "einops>=0.8.2",
    "huggingface-hub>=1.16.1",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "pymysql>=1.1.1",
    "pytest>=9.0.3",
    "requests>=2.34.2",
    "safetensors>=0.7.0",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
    "transformers>=5.9.0",
    "yfinance>=1.3.0",
]

[project.scripts]
stock-predict = "openstockagent.cli.run_prediction:main"
stock-factors = "openstockagent.cli.run_real_data_factors:main"
stock-screen = "openstockagent.cli.run_screening:main"
migrate-sqlite-market-data = "openstockagent.cli.migrate_sqlite_market_data:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openstockagent"]
